--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Quench",
+  "name": "Guidebook",
   "version": "1.0.0",
-  "description": "A Gulp file and project generator.",
+  "description": "A styleguide boilerplate.",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Quench",
+  "author": "Benoit Deziel",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.7.7",
     "browser-sync": "^2.11.1",
     "gulp": "3.9.0",
     "gulp-plumber": "1.0.0",
