--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "bower": "^1.7.7",
     "browser-sync": "^2.11.1",
     "gulp": "3.9.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
+    "gulp-sass": "^2.2.0",
     "gulpsmith": "^0.5.5",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-code-highlight": "0.0.3",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-headings": "^0.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-in-place": "^1.4.3",
     "metalsmith-layouts": "^1.5.4",
     "metalsmith-markdown-remarkable": "^0.1.1",
+    "metalsmith-metallic": "^0.3.1",
     "metalsmith-permalinks": "^0.4.1",
     "metalsmith-register-helpers": "^0.1.2",
     "require-dir": "^0.3.0"
