--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
   "description": "A styleguide boilerplate.",
   "main": "gulpfile.js",
   "scripts": {
+    "start": "npm install && bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoit Deziel",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benoitdeziel/guidebook.git"
+  },
   "devDependencies": {
     "bower": "^1.7.7",
     "browser-sync": "^2.11.1",
     "gulp": "3.9.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulpsmith": "^0.5.5",
     "handlebars": "^4.0.5",
+    "highlight.js": "^9.1.0",
+    "marked": "^0.3.5",
     "metalsmith": "^2.1.0",
-    "metalsmith-code-highlight": "0.0.3",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-headings": "^0.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-in-place": "^1.4.3",
     "metalsmith-layouts": "^1.5.4",
-    "metalsmith-markdown-remarkable": "^0.1.1",
-    "metalsmith-metallic": "^0.3.1",
+    "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.1",
     "metalsmith-register-helpers": "^0.1.2",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "string-template": "^1.0.0"
   }
 }
