--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "Guidebook",
-  "version": "1.0.0",
-  "description": "A styleguide boilerplate.",
-  "main": "gulpfile.js",
-  "scripts": {
-    "start": "npm install && bower install",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Benoit Deziel",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/benoitdeziel/guidebook.git"
-  },
-  "devDependencies": {
-    "bower": "^1.7.7",
-    "browser-sync": "^2.11.1",
-    "gulp": "3.9.0",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "^2.2.0",
-    "handlebars": "^4.0.5",
-    "highlight.js": "^9.1.0",
-    "marked": "^0.3.5",
-    "metalsmith": "^2.1.0",
-    "metalsmith-collections": "^0.7.0",
-    "metalsmith-headings": "^0.1.0",
-    "metalsmith-ignore": "^0.1.2",
-    "metalsmith-in-place": "^1.4.3",
-    "metalsmith-layouts": "^1.5.4",
-    "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.4.1",
-    "metalsmith-register-helpers": "^0.1.2",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "string-template": "^1.0.0"
-  }
+    "name": "Guidebook",
+    "version": "1.0.0",
+    "description": "A styleguide boilerplate.",
+    "main": "gulpfile.js",
+    "scripts": {
+        "start": "npm install && bower install",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Benoit Deziel",
+    "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/benoitdeziel/guidebook.git"
+    },
+    "devDependencies": {
+        "bower": "^1.7.7",
+        "browser-sync": "^2.11.1",
+        "gulp": "3.9.0",
+        "gulp-conflict": "^0.4.0",
+        "gulp-gh-pages": "^0.5.4",
+        "gulp-if": "^2.0.0",
+        "gulp-rename": "1.2.2",
+        "gulp-sass": "^2.2.0",
+        "gulp-template": "^3.1.0",
+        "handlebars": "^4.0.5",
+        "highlight.js": "^9.1.0",
+        "inquirer": "^0.12.0",
+        "marked": "^0.3.5",
+        "metalsmith": "^2.1.0",
+        "metalsmith-collections": "^0.7.0",
+        "metalsmith-headings": "^0.1.0",
+        "metalsmith-ignore": "^0.1.2",
+        "metalsmith-in-place": "^1.4.3",
+        "metalsmith-layouts": "^1.5.4",
+        "metalsmith-markdown": "^0.2.1",
+        "metalsmith-permalinks": "^0.4.1",
+        "metalsmith-register-helpers": "^0.1.2",
+        "require-dir": "^0.3.0",
+        "run-sequence": "^1.1.5",
+        "string-template": "^1.0.0"
+    }
 }
