--- a/package.json
+++ b/package.json
@@ -2,43 +2,45 @@
   "name": "guidebook",
   "version": "1.0.0",
   "description": "A styleguide boilerplate.",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "scripts": {
-    "start": "npm install && bower install",
+    "start": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoit Deziel",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/benoitdeziel/guidebook.git"
   },
   "dependencies": {
-    "bower": "^1.7.7",
-    "browser-sync": "^2.11.1",
+    "browser-sync": "^2.13.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-conflict": "^0.4.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-if": "^2.0.0",
+    "gulp-if": "^2.0.1",
     "gulp-inject-string": "^1.1.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-template": "^3.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-template": "^4.0.0",
+    "gulp-util": "^3.0.7",
     "handlebars": "^4.0.5",
-    "highlight.js": "^9.1.0",
-    "inquirer": "^0.12.0",
+    "highlight.js": "^9.5.0",
+    "inquirer": "^1.1.2",
+    "lodash": "^4.13.1",
     "marked": "^0.3.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-changed": "^2.0.0",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-headings": "^0.1.0",
     "metalsmith-ignore": "^0.1.2",
-    "metalsmith-in-place": "^1.4.3",
-    "metalsmith-layouts": "^1.5.4",
+    "metalsmith-in-place": "^1.4.4",
+    "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.4.1",
-    "metalsmith-register-helpers": "^0.1.2",
-    "metalsmith-rootpath": "^0.1.7",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
+    "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-register-helpers": "^0.2.0",
+    "metalsmith-rootpath": "^1.0.4",
+    "metalsmith-sass": "^1.3.0",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
