--- a/package.json
+++ b/package.json
@@ -14,36 +14,33 @@
     "url": "https://github.com/benoitdeziel/guidebook.git"
   },
   "dependencies": {
-    "browser-sync": "^2.13.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-conflict": "^0.4.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-if": "^2.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-inject-string": "^1.1.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.0.0",
     "gulp-template": "^4.0.0",
-    "gulp-util": "^3.0.7",
-    "handlebars": "^4.0.5",
-    "highlight.js": "^9.5.0",
+    "gulp-util": "^3.0.8",
+    "handlebars": "^4.0.6",
+    "highlight.js": "^9.9.0",
     "inquirer": "^1.1.2",
-    "lodash": "^4.13.1",
-    "marked": "^0.3.5",
-    "metalsmith": "^2.1.0",
-    "metalsmith-changed": "^2.0.0",
-    "metalsmith-collections": "^0.7.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
+    "metalsmith": "^2.3.0",
+    "metalsmith-collections": "^0.9.0",
     "metalsmith-headings": "^0.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-in-place": "^1.4.4",
-    "metalsmith-layouts": "^1.6.5",
+    "metalsmith-layouts": "^1.7.0",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-rootpath": "^1.0.4",
-    "metalsmith-sass": "^1.3.0",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.x"
+    "gulp": "^3.9.1"
   }
 }
