--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "babel-preset-stage-0": "^6.22.0",
     "commitizen": "^2.9.5",
     "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint": "^3.15.0"
   }
 }
