--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf dist/*",
     "prebuild": "npm run clean",
     "build": "babel src -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register ./src/**/*.test.js"
   },
   "author": "Benoit Deziel",
   "license": "MIT",
@@ -37,11 +37,15 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chai": "^3.5.0",
     "commitizen": "^2.9.5",
     "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.15.0"
+    "eslint": "^3.15.0",
+    "husky": "^0.13.1",
+    "mocha": "^3.2.0"
   }
 }
